Add a rendering hint for gfx implementations that perform reordering of complex text after applying spacing. Bug 284927, r+sr=roc, a=asa