gfx/src/gtk/nsFontMetricsPango.cpp
@@ -903,7 +903,8 @@ nsFontMetricsPango::GetHints(void)
 {
     return (NS_RENDERING_HINT_BIDI_REORDERING |
             NS_RENDERING_HINT_ARABIC_SHAPING | 
-            NS_RENDERING_HINT_FAST_MEASURE);
+            NS_RENDERING_HINT_FAST_MEASURE |
+            NS_RENDERING_HINT_REORDER_SPACED_TEXT);
 }
 
 /* static */
